@@ -1,12 +1,17 @@
 # Copyright (c) 2018 A&D
 # Small tester to measure the effectiveness of the CryptoTrainer
 import random
+import sys
+import subprocess
 
 from CryptoTrainer import PARAMETERS
 
 
 def main():
-    print('{}'.format(PARAMETERS))
+   for line in sys.stdin:
+       print(line)
+
+
 
 
 if __name__ == "__main__":
