@@ -1,0 +1,8 @@
+def main():
+
+    for i in range(0, 51):
+        if i % 8 == 0:
+            print('{}'.format(i))
+
+if __name__ == "__main__":
+    main()
