@@ -4,3 +4,11 @@ Created Changelog to track changes made over time more succinctly
 Created AutoTrader. Actual bot that will run when we trade
 
 Updated CryptoEvaluator and AutoTrader to use the new Parameter Dictionary
+
+2/4/18
+
+Updated CryptoTrainer to now pass input to the iterations of the bot
+Can now read and use input inside of the subprocesses
+Added a randomizer to CryptoTrainer to randomize the parameters
+Added a resetParameters method to reset the parameters for each randomization
+
